--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
             <button class="button">7</button>
             <button class="button">8</button>
             <button class="button">9</button>
-            <button class="minus">-</button>
+            <button class="minus dis">-</button>
           </div>
           <div class="show">
             <button class="button">4</button>
             <button class="button">5</button>
             <button class="button">6</button>
-            <button class="multiply">*</button>
+            <button class="multiply dis">*</button>
           </div>
           <div class="show">
             <button class="button">1</button>
             <button class="button">2</button>
             <button class="button">3</button>
-            <button class="divide">/</button>
+            <button class="divide dis">/</button>
           </div>
         </div>
         <div class="plus-equal">
-          <button>+</button>
-          <button>=</button>
+          <button id="plus" class="dis">+</button>
+          <button id="equal" class="dis">=</button>
         </div>
       </div>
 
@@ -55,6 +55,7 @@
     const divide = document.querySelector(".divide");
     const minus = document.querySelectorAll(".minus");
     const pshow = document.querySelector(".screen input");
+    const equal = document.getElementById("equal");
 
     buttons.forEach(function (button) {
       button.addEventListener("click", function () {
@@ -62,11 +63,38 @@
       });
     });
 
+
     minus.forEach(function (minus) {
       minus.addEventListener("click", function () {
         pshow.value += "-";
       });
     });
+
+    // multiply.forEach(function (multiply) {
+    //   multiply.addEventListener("click", function () {
+    //     pshow.value += "*";
+    //   });
+    // });
+
+    // plus.forEach(function (plus) {
+    //   plus.addEventListener("click", function () {
+    //     pshow.value += "+";
+    //   });
+    // });
+
+
+    // divid.forEach(function (divid) {
+    //   divid.addEventListener("click", function () {
+    //     pshow.value += "/";
+    //   });
+    // });
+
+
+    equal.addEventListener("click", function () {
+      pshow.value = eval(pshow.value);
+    });
+
+
   </script>
 </body>
 
