--- a/index.html
+++ b/index.html
@@ -1,102 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ماشین حساب</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ماشین حساب</title>
-  <link rel="stylesheet" href="css/style.css" />
-</head>
-
-<body>
-  <div class="main-parent">
-    <div class="parent">
-      <div class="screen">
-        <input type="text" placeholder="" />
-      </div>
-      <div class="keys">
-        <div class="numbers">
-          <div class="show">
-            <button class="button">7</button>
-            <button class="button">8</button>
-            <button class="button">9</button>
-            <button class="minus dis">-</button>
+  <body>
+    <div class="main-parent">
+      <div class="parent">
+        <div class="screen">
+          <input type="text" placeholder="" />
+        </div>
+        <div class="keys">
+          <div class="numbers">
+            <div class="show">
+              <button class="button">7</button>
+              <button class="button">8</button>
+              <button class="button">9</button>
+              <button class="minus dis">-</button>
+            </div>
+            <div class="show">
+              <button class="button">4</button>
+              <button class="button">5</button>
+              <button class="button">6</button>
+              <button class="multiply dis">*</button>
+            </div>
+            <div class="show">
+              <button class="button">1</button>
+              <button class="button">2</button>
+              <button class="button">3</button>
+              <button class="divide dis">/</button>
+            </div>
           </div>
-          <div class="show">
-            <button class="button">4</button>
-            <button class="button">5</button>
-            <button class="button">6</button>
-            <button class="multiply dis">*</button>
-          </div>
-          <div class="show">
-            <button class="button">1</button>
-            <button class="button">2</button>
-            <button class="button">3</button>
-            <button class="divide dis">/</button>
+          <div class="plus-equal">
+            <button id="plus" class="dis">+</button>
+            <button id="equal" class="dis">=</button>
           </div>
         </div>
-        <div class="plus-equal">
-          <button id="plus" class="dis">+</button>
-          <button id="equal" class="dis">=</button>
-        </div>
-      </div>
 
-      <div class="clear-all">
-        <input type="text" />
-        <button>C</button>
+        <div class="clear-all">
+          <input type="text" />
+          <button>C</button>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script>
-    const buttons = document.querySelectorAll(".button");
-    const multiply = document.querySelector(".multiply");
-    const plus = document.querySelector(".plus");
-    const divide = document.querySelector(".divide");
-    const minus = document.querySelectorAll(".minus");
-    const pshow = document.querySelector(".screen input");
-    const equal = document.getElementById("equal");
+    <script>
+      const buttons = document.querySelectorAll(".button");
+      const multiply = document.querySelector(".multiply");
+      const plus = document.querySelector(".plus");
+      const divide = document.querySelector(".divide");
+      const minus = document.querySelectorAll(".minus");
+      const pshow = document.querySelector(".screen input");
+      const equal = document.getElementById("equal");
 
-    buttons.forEach(function (button) {
-      button.addEventListener("click", function () {
-        pshow.value += button.textContent;
+      buttons.forEach(function (button) {
+        button.addEventListener("click", function () {
+          pshow.value += button.textContent;
+        });
       });
-    });
 
-
-    minus.forEach(function (minus) {
-      minus.addEventListener("click", function () {
-        pshow.value += "-";
+      minus.forEach(function (minus) {
+        minus.addEventListener("click", function () {
+          pshow.value += "-";
+        });
       });
-    });
 
-    // multiply.forEach(function (multiply) {
-    //   multiply.addEventListener("click", function () {
-    //     pshow.value += "*";
-    //   });
-    // });
+      multiply.forEach((multiply) {
+        multiply.addEventListener("click", function () {
+          pshow.value += "*";
+        });
+      });
 
-    // plus.forEach(function (plus) {
-    //   plus.addEventListener("click", function () {
-    //     pshow.value += "+";
-    //   });
-    // });
+      plus.forEach(function (plus) {
+        plus.addEventListener("click", function () {
+          pshow.value += "+";
+        });
+      });
 
+      divid.forEach(function (divid) {
+        divid.addEventListener("click", function () {
+          pshow.value += "/";
+        });
+      });
 
-    // divid.forEach(function (divid) {
-    //   divid.addEventListener("click", function () {
-    //     pshow.value += "/";
-    //   });
-    // });
-
-
-    equal.addEventListener("click", function () {
-      pshow.value = eval(pshow.value);
-    });
-
-
-  </script>
-</body>
-
+      equal.addEventListener("click", function () {
+        pshow.value = eval(pshow.value);
+      });
+    </script>
+  </body>
 </html>
 <!--pshow.value += button.textContent;-->
