--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
         resultdisplay.value = "";
       });
 
-      history.addEventListener("click", function () {
-        if (historylist.length === 0) {
-          console.log("تاریخچه ای نیست");
-        } else {
-          console.log("تاریخچه : \n" + historylist.join("\n"));
-        }
-      });
+      // history.addEventListener("click", function () {
+      //   if (historylist.length === 0) {
+      //     console.log("تاریخچه ای نیست");
+      //   } else {
+      //     console.log("تاریخچه : \n" + historylist.join("\n"));
+      //   }
+      // });
 
       history.addEventListener("click", function () {
         const historydisplay = document.getElementById("historydisplay");
