--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
               <button class="button">7</button>
               <button class="button">8</button>
               <button class="button">9</button>
-              <button class="minus dis">-</button>
+              <button onclick="addoperator('-')" class="minus dis">-</button>
             </div>
             <div class="show">
               <button class="button">4</button>
               <button class="button">5</button>
               <button class="button">6</button>
-              <button class="multiply dis">*</button>
+              <button onclick="addoperator('*')" class="multiply dis">*</button>
             </div>
             <div class="show">
               <button class="button">1</button>
@@ -35,9 +35,9 @@
             </div>
           </div>
           <div class="plus-equal">
-            <button id="plus" class="dis">+</button>
+            <button onclick="addoperator('+')" id="plus" class="dis">+</button>
             <button id="equal" class="dis">=</button>
-            <button class="divide dis">/</button>
+            <button onclick="addoperator('/')" class="divide dis">/</button>
           </div>
         </div>
 
@@ -53,16 +53,17 @@
 
     <script>
       const buttons = document.querySelectorAll(".button");
-      const multiply = document.querySelectorAll(".multiply");
-      const plus = document.getElementById("plus");
-      const divide = document.querySelectorAll(".divide");
-      const minus = document.querySelectorAll(".minus");
+      // const multiply = document.querySelectorAll(".multiply");
+      // const plus = document.getElementById("plus");
+      // const divide = document.querySelectorAll(".divide");
+      // const minus = document.querySelectorAll(".minus");
       const pshow = document.querySelector(".screen input");
       const equal = document.getElementById("equal");
       const clear = document.getElementById("clear");
       const resultdisplay = document.querySelector(".clear-all input");
       const history = document.getElementById("history");
       const historylist = [];
+      const operators = ["+", "-", "*", "/"];
 
       function appendToDisplay(val) {
         display.value += val;
@@ -80,27 +81,27 @@
       //   });
       // });
 
-      plus.addEventListener("click", function () {
-        pshow.value += "+";
-      });
+      // plus.addEventListener("click", function () {
+      //   pshow.value += "+";
+      // });
 
-      minus.forEach(function (minus) {
-        minus.addEventListener("click", function () {
-          pshow.value += "-";
-        });
-      });
+      // minus.forEach(function (minus) {
+      //   minus.addEventListener("click", function () {
+      //     pshow.value += "-";
+      //   });
+      // });
 
-      multiply.forEach(function (multiply) {
-        multiply.addEventListener("click", function () {
-          pshow.value += "*";
-        });
-      });
+      // multiply.forEach(function (multiply) {
+      //   multiply.addEventListener("click", function () {
+      //     pshow.value += "*";
+      //   });
+      // });
 
-      divide.forEach(function (divide) {
-        divide.addEventListener("click", function () {
-          pshow.value += "/";
-        });
-      });
+      // divide.forEach(function (divide) {
+      //   divide.addEventListener("click", function () {
+      //     pshow.value += "/";
+      //   });
+      // });
 
       equal.addEventListener("click", function () {
         try {
@@ -136,6 +137,15 @@
           historydisplay.innerHTML = historylist.join("<br>");
         }
       });
+
+      function addoperator(op) {
+        const lastchar = pshow.value.slice(-1);
+
+        if (operators.includes(lastchar)) {
+          pshow.value = pshow.value.slice(0, -1);
+        }
+        pshow.value += op;
+      }
 
       // --pshow.value += button.textContent;
     </script>
